--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 
          <div class="project-left">
 
-            <a href="https://twinkle-toes-happy-feet-bubbles.github.io/shell-constructions/" target="_blank"><img src="./assets//image/dreamdecor.png" alt=""></a>
+            <a href="https://twinkle-toes-happy-feet-bubbles.github.io/dream-decor/" target="_blank"><img src="./assets//image/dreamdecor.png" alt=""></a>
 
          </div>
 
@@ -546,7 +546,7 @@
 
          <div class="project-left">
 
-            <a href="https://pacific-mountain-43345.herokuapp.com/" target="_blank"><img src="./assets//image/devbook.png" alt=""></a>
+            <a href="#" target="_blank"><img src="./assets//image/devbook.png" alt=""></a>
 
          </div>
 
@@ -572,7 +572,7 @@
 
            <div class="project-links">
 
-             <a href="https://github.io/twinkle-toes-happy-feet-bubbles/dev-book" class="btn-blue btn-small hover-bg-light" target="_blank" style="font-size:1rem;">  <i class="fas fa-external-link-alt"></i> Live Demo</a>
+             <a href="#" class="btn-blue btn-small hover-bg-light" target="_blank" style="font-size:1rem;">  <i class="fas fa-external-link-alt"></i> Live Demo</a>
 
              
 
