--- a/index.html
+++ b/index.html
@@ -549,7 +549,49 @@
          </div>
 
        </div>
+<!--Project Starts here -->
 
+       <div class="project-row wow fadeInUp" data-aos="fade-up">
+
+         <div class="project-left">
+
+            <a href="https://twinkle-toes-happy-feet-bubbles.github.io/shell-constructions/" target="_blank"><img src="./assets//image/push4positivity.png" alt=""></a>
+
+         </div>
+
+         <div class="project-right">
+
+           <h4 style="color:#3F396D;font-weight:800;">Push4positivity </h4>
+
+           <ul class="tech-stack-list">
+
+             <p class="text-grey"><b>Made with: </b></p>
+
+             <li><span class="iconify" data-icon="logos:javascript" data-inline="false"></span></li>
+
+              <li><span class="iconify" data-icon="logos:css-3" data-inline="false"></span></li>
+
+              <li><span class="iconify" data-icon="logos:html-5" data-inline="false"></span></span></li>
+
+              <li><span class="iconify" data-icon="logos:bootstrap" data-inline="false"></span></li>
+
+           </ul>
+
+           <p style="font-size:1.15rem;">Push4positivity is a hybrid personal X Courses site which looks professional, sends a strong message to the user while staying unique at the same time</p>
+
+           <div class="project-links">
+
+             <a href="https://push4positivity.netlify.app" class="btn-blue btn-small hover-bg-light" target="_blank" style="font-size:1rem;">  <i class="fas fa-external-link-alt"></i> Live Demo</a>
+
+             
+
+           </div>
+
+         </div>
+
+       </div>
+
+       <!-- Project Ends here-->
        <div class="project-row wow fadeInUp" data-aos="fade-up">
 
          <div class="project-left">
