--- a/index.html
+++ b/index.html
@@ -1286,6 +1286,8 @@
       }
 
     </script>
+<script defer data-domain="reddyportfolio.netlify.app" src="https://plausible.io/js/plausible.js"></script>
+
 
        </body>
 
