--- a/index.html
+++ b/index.html
@@ -922,8 +922,8 @@
                            </div>
 
                         </div>
-
-                        <button type="submit" id="submit" class="appointment-btn">Get in Touch</button>
+ <H4>  Contact me on reddit or twitter @notprajyoth. I'm in college. I'll take care of this issue once i get home</H4>
+                        <button type="submit" id="submit" class="appointment-btn">Form temporarily closed due to spam</button>
 
                      </form>
 
