--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
                            </div>
 
                         </div>
- <H4>  Contact me on reddit or twitter @notprajyoth. I'm in college. I'll take care of this issue once i get home</H4>
+ <H4>  Contact me on <a href="https://www.reddit.com/user/Turbulent-Spark6633/>Reddit</a> or twitter @notprajyoth. I'm in college. I'll take care of this issue once i get home</H4>
                         <button type="submit" id="submit" class="appointment-btn">Form temporarily closed due to spam</button>
 
                      </form>
