--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
                            </div>
 
                         </div>
- <H4>  Contact me on <a href="https://www.reddit.com/user/Turbulent-Spark6633/>Reddit</a> or twitter @notprajyoth. I'm in college. I'll take care of this issue once i get home</H4>
+ <H4>  Contact me on <a href="https://www.reddit.com/user/Turbulent-Spark6633/>Reddit</a> or <a href="https://mobile.twitter.com/notprajyoth>twitter</a>. I'm in college. I'll take care of this issue once i get home</H4>
                         <button type="submit" id="submit" class="appointment-btn">Form temporarily closed due to spam</button>
 
                      </form>
@@ -983,13 +983,13 @@
 
                      <li class="d-inline-block">
 
-                        <a href="https://www.github.com/twinkle-toes-happy-feet-bubbles/" target="_blank"><i class="fab fa-github d-flex align-items-center justify-content-center"></i></a>
+                        <a href="https://www.github.com/" target="_blank"><i class="fab fa-github d-flex align-items-center justify-content-center"></i></a>
 
                      </li>
 
                      <li class="d-inline-block">
 
-                        <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter d-flex align-items-center justify-content-center"></i></a>
+                        <a hre="https://mobile.twitter.com/notprajyoth" target="_blank"><i class="fab fa-twitter d-flex align-items-center justify-content-center"></i></a>
 
                      </li>
 
