--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
 
                      <li class="d-inline-block">
 
-                        <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in d-flex align-items-center justify-content-center"></i></a>
+                        <a href="https://www.linkedin.com/in/prajyoth-reddy-mothi-102139203" target="_blank"><i class="fab fa-linkedin-in d-flex align-items-center justify-content-center"></i></a>
 
                      </li>
 
